<resources>
    <string name="app_name">Mina</string>
    <string name="_hi">Hi</string>
    <string name="_get_started">Get Started</string>
    <string name="_choose_language_communicate_mina">Choose a language in which it will be convenient for you to communicate with Mina</string>
    <string name="_what_is_mina">Let\'s get a look what is Mina and what can she do</string>
    <string name="_click_next">Click next to continue</string>
    <string name="_next">Next</string>
    <string name="_ask_to_mina">You can ask Mina what interests you or what you want to know.</string>
    <string name="_mina_personal_asistant">Mina is your personal voice assistant.</string>
    <string name="_tutorial">Tutorial</string>
    <string name="_todays_prayer">Today\'s prayer</string>
    <string name="_prayer_times">Prayer times</string>
    <string name="_zohr_prayer">Zhor</string>
    <string name="_asr_prayer">Asr</string>
    <string name="_sham_prayer">Sham</string>
    <string name="_subh_prayer">Subh</string>
    <string name="_hiftan_prayer">Hiftan</string>
    <string name="_weather">Weather</string>
    <string name="_islam">Islam</string>
    <string name="_news">News</string>
    <string name="_kaaba">Kaaba</string>
    <string name="_qibla">Qibla</string>
    <string name="_dua">Dua</string>
    <string name="_aperture">Aperture</string>
    <string name="_tasbih">Tasbih</string>
    <string name="_book">Book</string>
    <string name="_brain">Brain</string>
    <string name="_calendar">Calendar</string>
    <string name="_social">Social</string>
    <string name="_user">User</string>
    <string name="_event">Event</string>
    <string name="_map">Map</string>
    <string name="_place">Place</string>
    <string name="_currency">Currency</string>
    <string name="_wiki">Wiki</string>
    <string name="_info">Info</string>
    <string name="_profile">Profile</string>
    <string name="_settings">Settings</string>
    <string name="_camera">Camera</string>
    <string name="_radio">Radio</string>
    <string name="_system">System</string>
    <string name="_calculator">Calculator</string>
    <string name="_prayer">Prayer</string>
    <string name="_islam_calendar">Islam calendar</string>
    <string name="_start">Start</string>
    <string name="_call_now">Call Now</string>
    <string name="_about_the_place">About the place</string>
    <string name="_categories">Categories</string>
    <string name="_tags">Tags</string>
    <string name="_gallery">Gallery</string>
    <string name="_date">Date</string>
    <string name="_email">Email</string>
    <string name="_password">Password</string>
    <string name="_login">Login</string>
    <string name="_create_new_account">Create new account</string>
    <string name="_forgot_your_password">Forgot your password?</string>
    <string name="_personal_information">Personal information</string>
    <string name="_name">Name, Lastname</string>
    <string name="_gender">Gender</string>
    <string name="_email_adress">Email address</string>
    <string name="_username">Username</string>
    <string name="_phone">Phone</string>
    <string name="_confirm_password">Confirm password</string>
    <string name="_register">Register</string>
    <string name="_already_have_account">Already have account ? Login </string>
    <string name="_number_verification">Number verification</string>
    <string name="_enter_four_digit_number">Enter 4 digit number that send to</string>
    <string name="_complete_register">Complete register</string>
    <string name="_required_field">This field is required</string>
    <string name="_pass_equal">Passwords must be equal</string>
    <string name="_cannot_contain_spaces">Password cannot contain spaces</string>
    <string name="_title_error">Error</string>
    <string name="_raport">Raport</string>
    <string name="_attention">Attention</string>
    <string name="_done">Done</string>
    <string name="_cancel">Cancel</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="_resend_sms">Resend SMS</string>
    <string name="_new_code_sent">New code sent</string>
    <string name="_you_are_not_registered">You are not registered</string>
    <string name="_if_you_back">If you go back, you\'ll have to confirm the number again</string>
    <string name="_reset_password">Reset password</string>
    <string name="_or">Or</string>
    <string name="_get_code">Get code</string>
    <string name="_code">Code</string>
    <string name="_new_password">New password</string>
    <string name="_free">Free</string>
    <string name="_listen">Listen</string>
    <string name="_read">Read</string>
    <string name="_author_dt">Author: \u0020</string>
    <string name="_buy_btn">Buy \u0020 | \u0020</string>
    <string name="publisher_description">Publisher Description</string>
    <string name="genre">GENRE</string>
    <string name="released">RELEASED</string>
    <string name="length">LENGTH</string>
    <string name="seller">SELLER</string>
    <string name="language">LANGUAGE</string>
    <string name="_general">General</string>
    <string name="_Religion">Religion</string>
    <string name="_terms">Terms, Conditions</string>
    <string name="_our_apps">Our apps</string>
    <string name="_contact_us">Contact Us</string>
    <string name="_logout">Logout</string>
    <string name="_profile_settings">Profile settings</string>
    <string name="_male">Male</string>
    <string name="_female">Female</string>
    <string name="_alarm">Alarm</string>
    <string name="_add_alarm">Add alarm</string>
    <string name="_repeat">Repeat</string>
    <string name="_ringtone">Ringtone</string>
    <string name="_salutation">Salutation</string>
    <string name="_sunday">Sunday</string>
    <string name="_monday">Monday</string>
    <string name="_tuesday">Tuesday</string>
    <string name="_wednesday">Wednesday</string>
    <string name="_thursday">Thursday</string>
    <string name="_friday">Friday</string>
    <string name="_saturday">Saturday</string>
    <string name="defaults">Defaults</string>
    <string name="_teach_me">Teach Me</string>
    <string name="_currently_learning">I\'m currently learning this</string>
    <string name="_hajma_greets_you">HajMa family greets you</string>
    <string name="_sign_up_for_hajma">Sign up for the Hajma family</string>
</resources>
