<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_standart_bg"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/iButtonBackAlarmRepeat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iButtonBackAlarmRepeat"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbxSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/_sunday" />

        <CheckBox
            android:id="@+id/cbxMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/_monday" />

        <CheckBox
            android:id="@+id/cbxTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/_tuesday" />

        <CheckBox
            android:id="@+id/cbxWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/_wednesday" />

        <CheckBox
            android:id="@+id/cbxThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/_thursday" />

        <CheckBox
            android:id="@+id/cbxFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/_friday" />

        <CheckBox
            android:id="@+id/cbxSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/_saturday" />


    </LinearLayout>


</RelativeLayout>