<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_standart_bg"
    android:padding="16dp"
    tools:context=".activity.NamazTimeMonthly">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottiBackNamazMontly"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/round_wave" />

    <LinearLayout
        android:id="@+id/lnrNamazHeaders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lottiBackNamazMontly"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/dateHeaderNamaz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_date"
            android:textAlignment="center"
            android:textColor="#34485E" />

        <TextView
            android:id="@+id/subhHeaderNamaz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_subh_prayer"
            android:textAlignment="center"
            android:textColor="#34485E" />

        <TextView
            android:id="@+id/zohrHeaderNamaz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_zohr_prayer"
            android:textAlignment="center"
            android:textColor="#34485E" />

        <TextView
            android:id="@+id/esrHeaderNamaz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_asr_prayer"
            android:textAlignment="center"
            android:textColor="#34485E" />

        <TextView
            android:id="@+id/shamHeaderNamaz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_sham_prayer"
            android:textAlignment="center"
            android:textColor="#34485E" />

        <TextView
            android:id="@+id/xiftenHeaderNamaz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_hiftan_prayer"
            android:textAlignment="center"
            android:textColor="#34485E" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNamazTimeWeeklyMontly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnrNamazHeaders" />


</RelativeLayout>