<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="16dp">


    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etResetNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_bg"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/_get_code"
        android:textColor="#2E476E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtAlreadyHaveAccountResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnResetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/_already_have_account"
        android:textColor="#2D3747"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView132"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="5dp"
        android:text="@string/_reset_password"
        android:textColor="#22242A"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etResetEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textView132"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/et_login_bg"
        android:fontFamily="@font/rubik_medium"
        android:hint="@string/_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#2E476E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView134"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etResetEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="5dp"
        android:text="@string/_or"
        android:textColor="#22242A"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/etResetNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textView134"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_login_bg"
        android:fontFamily="@font/rubik_medium"
        android:hint="@string/_phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#2E476E"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/pbResetPasswordLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etResetNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        tools:visibility="gone" />


</RelativeLayout>