<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_bg">


                <RelativeLayout
                    android:id="@+id/rlllllll"
                    android:layout_width="278dp"
                    android:layout_height="270dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/rectangle_login"
                    android:padding="16dp">


                    <TextView
                        android:id="@+id/txtLoginTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_sign_up_for_hajma"
                        android:textColor="#2D3747"
                        android:textSize="38sp"
                        app:lineHeight="50sp" />

                    <TextView
                        android:id="@+id/txtLoginSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="20dp"
                        android:maxWidth="200dp"
                        android:text="@string/_hajma_greets_you"
                        android:textColor="#2D3747"
                        android:textSize="20sp"
                        app:lineHeight="30sp" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/etLoginUsername"
                    android:layout_width="315dp"
                    android:layout_height="58dp"
                    android:layout_below="@id/rlllllll"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/et_login_bg"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/_email"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <EditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="315dp"
                    android:layout_height="58dp"
                    android:layout_below="@id/etLoginUsername"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/et_login_bg"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="315dp"
                    android:layout_height="58dp"
                    android:layout_below="@id/etLoginPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_login_bg"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/_login"
                    android:textColor="#2E476E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtCreateNewAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnLogin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/_create_new_account"
                    android:textColor="#2D3747"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtCreateNewAccount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/_forgot_your_password"
                    android:textColor="#2D3747"
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/progressBarLoginLoading"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_below="@id/etLoginPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    tools:visibility="gone" />


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>



