<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bg"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/et_login_bg"
        android:ems="10"
        android:hint="@string/_code"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etCode"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_login_bg"
        android:ems="10"
        android:hint="@string/_new_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <Button
        android:id="@+id/btnResetNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_bg"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/_reset_password"
        android:textColor="#2E476E"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/pbNewPasswordLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        tools:visibility="visible" />


</RelativeLayout>